Dummy data in place. CardView works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="lfh_title">Little Forest Hills</string>
+    <string name="lfh_description">A place it\'s great I promise</string>
 </resources>
