--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,10 +37,17 @@
     <string name="kj_image_content">Katie kissing her mother, both with face make up</string>
     <string name="rock_title">Rock Climbing</string>
     <string name="rock_desc">Rock climbing is a very popular aspect of Dallas culture. Members of Team Texas travel great distances to practice and compete together. It is also commonly used for team building and for couples going on dates.</string>
+    <string name="arb_title">Dallas Arboretum</string>
+    <string name="arb_desc">Nested between Little Forest Hills and White Rock Lake, the Dallas Arboretum is always blooming with flowers, culture, and events. </string>
+    <string name="arb_image_content">Image of 3 people at the Dallas Arboretum</string>
 
     <!--Outdoors Titles, Descriptions, and Content Descriptions-->
     <string name="wrl_title">White Rock Lake</string>
     <string name="wrl_desc">White Rock Lake has a two way paved trail open to pedestrians, longboarders, roller skaters, and bicyclists.</string>
     <string name="wrl_image_content">Image of a bicycle by a tree at White Rock Lake</string>
-    
+    <string name="texoma_title">Lake Texoma</string>
+    <string name="texoma_desc">Between the states of Oklahoma and Texas, Lake Texoma is a destination trip from Dallas, but provides some of the closest locations for those looking for a beautiful backpacking trip.</string>
+    <string name="preserve_title">Cedar Ridge Preserve</string>
+    <string name="preserve_desc">A popular destination for weekend hikers or even those training for events, Cedar Ridge Preserve is the best and closest set of nature trails to Dallas.</string>
+
 </resources>
