--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,77 +2,77 @@
     <string name="app_name">DallasTourGuideApp</string>
     
     <!--Food Titles, Descriptions, and Content Descriptions-->
-    <!--1-->
+    <!--1 X-->
     <string name="truckyard_title">Truckyard</string>
     <string name="truckyard_desc">Truckyard is an eclectic gathering of food trucks and vintage chairs and tables</string>
     <string name="truckyard_image_content">Image of 3 people at the Truckyard</string>
-    <!--2-->
+    <!--2 X-->
     <string name="flying_saucer_title">Flying Saucer</string>
     <string name="flying_saucer_desc">The walls and ceiling of this place are covered with personalized plates of those who have tried a minimum of 300 different beers at Flying Saucer</string>
     <string name="flying_saucer_image_content">Image of 3 people at Flying Saucer</string>
-    <!--3-->
+    <!--3 X-->
     <string name="kellers_title">Keller\'s Drive-In</string>
     <string name="kellers_desc">Keller\'s is a classic Texas experience. Beers, burgers, and shakes delivered to your vehicle as you admire the culture of cars, trucks, and motorcycles.</string>
     <string name="kellers_image_content">Image of Texans with motorcycles in a parking lot</string>
-    <!--4-->
-    <string name="uu_title">Uncle Uber\s</string>
+    <!--4 Y-->
+    <string name="uu_title">The Lot</string>
     <string name="uu_desc">Did you say you were vegetarian? If you enter this building as a vegetarian, you\'ll be walking out without the title</string>
-    <!--5-->
-    <string name="cad_title">Cattleacks</string>
+    <!--5 X-->
+    <string name="cad_title">The Rustic</string>
     <string name="cad_desc">Touch the meat and it\'ll fall of the bone. Tender as.</string>
 
     <!--Art Titles, Descriptions, and Content Descriptions-->
-    <!--1-->
+    <!--1 X-->
     <string name="beach_house_title">Music</string>
     <string name="beach_house_desc">Music is an integral part of Dallas culture. Dallas is famous for being a stop for bands and musicians travelling across the States. This has lead to a great turn out in Dallas for just about any band hoping to make a tour through America. Bands always seem to have a good time with Dallas crowds as they are often full and lively.</string>
     <string name="beach_house_image_content">Image of the band Beach House performing</string>
-    <!--2-->
+    <!--2 X-->
     <string name="museum_title">Museums</string>
-    <string name="museum_desc">Dallas has it\'s fair share of museums to offer</string>
-    <string name="museum_image_content">Image of TTTTTTTTTTTTT</string>
-    <!--3-->
-    <string name="arch_title">Architecture</string>
-    <string name="arch_desc">Architecture of downtown Dallas is famous for </string>
-    <string name="arch_image_content">an image of </string>
-    <!--4-->
+    <string name="museum_desc">Dallas has it\'s fair share of museums to offer. The Dallas Museum of Art (DMA) is a free option for those interested in art, or on a budget. </string>
+    <string name="museum_image_content">Image of bowls</string>
+    <!--3 X-->
+    <string name="arch_title">Galleries</string>
+    <string name="arch_desc">Dallas has a thriving local art scene, hosting small galleries, as well as larger conventions such as Art Con.</string>
+    <string name="arch_image_content">an illustration of a couple in a bathtub</string>
+    <!--4 Y-->
     <string name="de_title">Deep Ellum</string>
     <string name="de_desc">To truly experience the Art world of Dallas, and a great piece of what Texas has to offer, Deep Ellum is a must visit.</string>
-    <!--5-->
+    <!--5 Z-->
     <string name="mural_title">Murals</string>
-    <string name="mural_desc">Murals are</string>
+    <string name="mural_desc">Murals decorate many parts of downtown</string>
 
     <!--Culture Titles, Descriptions, and Content Descriptions-->
-    <!--1-->
+    <!--1 X-->
     <string name="matt_title">Backyard Culture</string>
     <string name="matt_desc">Backyard BBQ\'s, firepits, parties, and hangouts are such a common part of Dallas culture it would be surprising to live in Dallas for one year and not be invited to one.</string>
     <string name="matt_image_content">Image of Matt in a backyard</string>
-    <!--2-->
+    <!--2 X-->
     <string name="kj_title">Company Celebrations</string>
     <string name="kj_desc">It is common in Dallas for companies to celebrate milestones by throwing parties for employees. Often the parties are family friendly and include musical guests, face painting, and balloon makers.</string>
     <string name="kj_image_content">Katie kissing her mother, both with face make up</string>
-    <!--3-->
+    <!--3 Y-->
     <string name="rock_title">Rock Climbing</string>
     <string name="rock_desc">Rock climbing is a very popular aspect of Dallas culture. Members of Team Texas travel great distances to practice and compete together. It is also commonly used for team building and for couples going on dates.</string>
-    <!--3-->
+    <!--4 X-->
     <string name="arb_title">Dallas Arboretum</string>
     <string name="arb_desc">Nested between Little Forest Hills and White Rock Lake, the Dallas Arboretum is always blooming with flowers, culture, and events. </string>
     <string name="arb_image_content">Image of 3 people at the Dallas Arboretum</string>
-    <!--4-->
-    <string name="roof_title">Rooftop Gatherings</string>
-    <string name="roof_desc">Dallas is well fitted to accommodate those looking to experience the wide open spaces that it is known for as rooftop gatherings are popular at most times of the year.</string>
+    <!--5 X-->
+    <string name="roof_title">Benches</string>
+    <string name="roof_desc">Dallas is well fitted to accommodate those looking to experience wide open spaces. There is an abundance of benches spread throughout the city. Walking between them can fill a day with beautiful light and meaningful conversation.</string>
 
     <!--Outdoors Titles, Descriptions, and Content Descriptions-->
-    <!--1-->
+    <!--1 X-->
     <string name="wrl_title">White Rock Lake</string>
-    <string name="wrl_desc">White Rock Lake has a two way paved trail open to pedestrians, longboarders, roller skaters, and bicyclists.</string>
-    <string name="wrl_image_content">Image of a bicycle by a tree at White Rock Lake</string>
-    <!--2-->
+    <string name="wrl_desc">White Rock Lake has a two way paved trail open to pedestrians, longboarders, roller skaters, and bicyclists. Excellent atmosphere for observing a Blood Moon.</string>
+    <string name="wrl_image_content">Image of a Blood Moon at White Rock Lake</string>
+    <!--2 Y-->
     <string name="texoma_title">Lake Texoma</string>
     <string name="texoma_desc">Between the states of Oklahoma and Texas, Lake Texoma is a destination trip from Dallas, but provides some of the closest locations for those looking for a beautiful backpacking trip.</string>
-    <!--3-->
+    <!--3 Y-->
     <string name="preserve_title">Cedar Ridge Preserve</string>
     <string name="preserve_desc">A popular destination for weekend hikers or even those training for events, Cedar Ridge Preserve is the best and closest set of nature trails to Dallas.</string>
-    <!--4-->
+    <!--4 -->
     <string name="lfh_title">Little Forest Hills</string>
     <string name="lfh_description">Magical and quaint, Little Forest Hills is a great place to walk at anytime. The light is especially magical in the early morning and at sunset. Garage sales often happen on the weekends, and a walk through the neighborhood will provide a relaxing and rewarding time.</string>
     <!--5-->
